--- a/2.1 split images (alternative).ipynb
+++ b/2.1 split images (alternative).ipynb
@@ -151,26 +151,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Copying train images from BLXTN-OK: 100%|██████████| 4/4 [00:00<00:00, 136.02it/s]\n",
-      "Copying test images from BLXTN-OK: 100%|██████████| 1/1 [00:00<00:00, 199.61it/s]\n",
-      "Copying train images from BLXTN-X: 100%|██████████| 4/4 [00:00<00:00, 194.28it/s]\n",
-      "Copying test images from BLXTN-X: 100%|██████████| 1/1 [00:00<00:00, 221.36it/s]\n",
-      "Copying train images from BRKA-OK: 100%|██████████| 4/4 [00:00<00:00, 257.91it/s]\n",
-      "Copying test images from BRKA-OK: 100%|██████████| 1/1 [00:00<00:00, 221.69it/s]\n",
-      "Copying train images from BRKA-X: 100%|██████████| 4/4 [00:00<00:00, 234.97it/s]\n",
-      "Copying test images from BRKA-X: 100%|██████████| 1/1 [00:00<00:00, 250.02it/s]\n",
-      "Copying train images from DFLM-OK: 100%|██████████| 4/4 [00:00<00:00, 171.60it/s]\n",
-      "Copying test images from DFLM-OK: 100%|██████████| 1/1 [00:00<00:00, 142.88it/s]\n",
-      "Copying train images from DFLM-X: 100%|██████████| 4/4 [00:00<00:00, 163.35it/s]\n",
-      "Copying test images from DFLM-X: 100%|██████████| 1/1 [00:00<00:00, 116.24it/s]\n",
-      "Copying train images from PNDL-OK: 100%|██████████| 4/4 [00:00<00:00, 249.38it/s]\n",
-      "Copying test images from PNDL-OK: 100%|██████████| 1/1 [00:00<00:00, 249.99it/s]\n",
-      "Copying train images from PNDL-X: 100%|██████████| 4/4 [00:00<00:00, 166.29it/s]\n",
-      "Copying test images from PNDL-X: 100%|██████████| 1/1 [00:00<00:00, 133.33it/s]\n",
-      "Copying train images from ZRTC-OK: 100%|██████████| 4/4 [00:00<00:00, 173.69it/s]\n",
-      "Copying test images from ZRTC-OK: 100%|██████████| 1/1 [00:00<00:00, 250.11it/s]\n",
-      "Copying train images from ZRTC-X: 100%|██████████| 4/4 [00:00<00:00, 226.69it/s]\n",
-      "Copying test images from ZRTC-X: 100%|██████████| 1/1 [00:00<00:00, 142.63it/s]\n",
+      "Copying train images from BI-OK: 100%|██████████| 32/32 [00:00<00:00, 229.26it/s]\n",
+      "Copying test images from BI-OK: 100%|██████████| 8/8 [00:00<00:00, 268.43it/s]\n",
+      "Copying train images from DB: 100%|██████████| 12/12 [00:00<00:00, 277.84it/s]\n",
+      "Copying test images from DB: 100%|██████████| 4/4 [00:00<00:00, 290.40it/s]\n",
+      "Copying train images from EDB: 100%|██████████| 19/19 [00:00<00:00, 274.91it/s]\n",
+      "Copying test images from EDB: 100%|██████████| 5/5 [00:00<00:00, 296.63it/s]\n",
       "INFO:root:Successfully split and copied images and XML files to train and test folders.\n"
      ]
     }
