--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,10 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tkinter import filedialog\n",
+    "from tkinter import Tk\n",
+    "\n",
+    "def get_save_location():\n",
+    "    root = Tk()\n",
+    "    root.withdraw()  # Hide the main window\n",
+    "    folder_selected = filedialog.askdirectory()\n",
+    "    root.destroy()  # Destroy the main window\n",
+    "    return folder_selected\n",
+    "\n",
     "# Set the desired frame width and height\n",
     "frameWidth = 1024\n",
     "frameHeight = 576\n",
@@ -189,7 +199,7 @@
     "if not cap.isOpened():\n",
     "    print(\"Failed to open the camera.\")\n",
     "    raise SystemExit(1)\n",
-    "    \n",
+    "\n",
     "# Sets the capture resolution \n",
     "cap.set(cv2.CAP_PROP_FPS, 60)\n",
     "\n",
@@ -256,16 +266,19 @@
     "            # time for which image displayed\n",
     "            cv2.waitKey(2000)\n",
     "\n",
+    "            # Prompt the user to enter the save location\n",
+    "            IMAGES_PATH = get_save_location()\n",
+    "            \n",
     "            # Prompt the user to enter the label\n",
     "            while True:\n",
-    "                label = input(\"Enter label or folder: \")\n",
+    "                label = input(\"Enter label: \")\n",
     "                if len(label.strip()) > 0:\n",
     "                    break\n",
     "                else:\n",
     "                    print(\"Invalid label name. Please try again.\")\n",
     "\n",
     "            # Generate unique image name using uuid\n",
-    "            imgname = os.path.join(IMAGES_PATH, label, label+'.'+'{}.jpg'.format(str(uuid.uuid1())))\n",
+    "            imgname = os.path.join(IMAGES_PATH, label+'.'+'{}.jpg'.format(str(uuid.uuid1())))\n",
     "            \n",
     "            try:\n",
     "                # Save the current frame to the specified filename and path\n",
@@ -282,6 +295,7 @@
     "    # If the 'q' key or the 'esc' key is pressed, exit the loop\n",
     "    if key == ord('q') or key == 27:\n",
     "        break\n",
+    "    \n",
     "# Release the video capture object\n",
     "cap.release()\n",
     "\n",
