--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Create a list of labels for the different classes\n",
-    "labels = ['EDB', 'DB', 'BI-OK']\n",
+    "labels = ['DB', 'BI-OK']\n",
     "\n",
     "# Specify the number of images to capture for each \n",
     "number_imgs = 5"
@@ -164,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image saved as E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/test\\tst3.cba95402-cedf-11ed-9a95-44af2861d338.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "from tkinter import filedialog\n",
     "from tkinter import Tk\n",
@@ -691,8 +699,8 @@
     "            print(f\"Renamed {old_filepath} to {new_filepath}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    folder_path = r\"E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\"  # Replace this with the path to your folder\n",
-    "    old_initial_part = \"BLXTN-X\"\n",
+    "    folder_path = r\"E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\EDB\"  # Replace this with the path to your folder\n",
+    "    old_initial_part = \"EDB\"\n",
     "    new_initial_part = \"DB\"  # Replace this with the new initial part you want\n",
     "\n",
     "    rename_files_in_directory(folder_path, old_initial_part, new_initial_part)\n"
