--- a/2.1 split images (alternative).ipynb
+++ b/2.1 split images (alternative).ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,23 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Copying train images from BI-OK: 100%|██████████| 32/32 [00:00<00:00, 229.26it/s]\n",
-      "Copying test images from BI-OK: 100%|██████████| 8/8 [00:00<00:00, 268.43it/s]\n",
-      "Copying train images from DB: 100%|██████████| 12/12 [00:00<00:00, 277.84it/s]\n",
-      "Copying test images from DB: 100%|██████████| 4/4 [00:00<00:00, 290.40it/s]\n",
-      "Copying train images from EDB: 100%|██████████| 19/19 [00:00<00:00, 274.91it/s]\n",
-      "Copying test images from EDB: 100%|██████████| 5/5 [00:00<00:00, 296.63it/s]\n",
-      "INFO:root:Successfully split and copied images and XML files to train and test folders.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -272,9 +258,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Will be updated in the future."
+   ]
   }
  ],
  "metadata": {
