--- a/3.0 Training and Detection.ipynb
+++ b/3.0 Training and Detection.ipynb
@@ -364,13 +364,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the number of classes for the SSD model based on the length of the labels list\n",
     "pipeline_config.model.ssd.num_classes = len(labels)\n",
+    "\n",
+    "# Set the batch size for training the model to 4\n",
     "pipeline_config.train_config.batch_size = 4\n",
+    "\n",
+    "# Set the path to the pre-trained model checkpoint for fine-tuning\n",
     "pipeline_config.train_config.fine_tune_checkpoint = os.path.join(paths['PRETRAINED_MODEL_PATH'], PRETRAINED_MODEL_NAME, 'checkpoint', 'ckpt-0')\n",
+    "\n",
+    "# Set the type of the fine-tune checkpoint to 'detection'\n",
     "pipeline_config.train_config.fine_tune_checkpoint_type = \"detection\"\n",
+    "\n",
+    "# Set the path to the label map file for training input\n",
     "pipeline_config.train_input_reader.label_map_path= files['LABELMAP']\n",
+    "\n",
+    "# Set the path to the TensorFlow Record file for training input\n",
     "pipeline_config.train_input_reader.tf_record_input_reader.input_path[:] = [os.path.join(paths['ANNOTATION_PATH'], 'train.record')]\n",
+    "\n",
+    "# Set the path to the label map file for evaluation input\n",
     "pipeline_config.eval_input_reader[0].label_map_path = files['LABELMAP']\n",
+    "\n",
+    "# Set the path to the TensorFlow Record file for evaluation input\n",
     "pipeline_config.eval_input_reader[0].tf_record_input_reader.input_path[:] = [os.path.join(paths['ANNOTATION_PATH'], 'test.record')]"
    ]
   },
