--- a/3.0 Training and Detection.ipynb
+++ b/3.0 Training and Detection.ipynb
@@ -367,7 +367,7 @@
     "# Set the number of classes for the SSD model based on the length of the labels list\n",
     "pipeline_config.model.ssd.num_classes = len(labels)\n",
     "\n",
-    "# Set the batch size for training the model to 4\n",
+    "# Set the batch size for training the model\n",
     "pipeline_config.train_config.batch_size = 4\n",
     "\n",
     "# Set the path to the pre-trained model checkpoint for fine-tuning\n",
