--- a/3.0 Training and Detection.ipynb
+++ b/3.0 Training and Detection.ipynb
@@ -606,27 +606,40 @@
     }
    ],
    "source": [
+    "# Read the image using OpenCV and store it in a NumPy array\n",
     "img = cv2.imread(IMAGE_PATH)\n",
     "image_np = np.array(img)\n",
     "\n",
+    "# Convert the image to a TensorFlow tensor and expand its dimensions to prepare for detection\n",
     "input_tensor = tf.convert_to_tensor(np.expand_dims(image_np, 0), dtype=tf.float32)\n",
+    "\n",
+    "# Perform object detection using the pre-trained model and the input tensor\n",
     "detections = detect_fn(input_tensor)\n",
     "\n",
+    "# Get the number of detections and remove it from the detection dictionary\n",
     "num_detections = int(detections.pop('num_detections'))\n",
+    "\n",
+    "# Convert the remaining detection tensors to NumPy arrays\n",
     "detections = {key: value[0, :num_detections].numpy()\n",
     "              for key, value in detections.items()}\n",
+    "\n",
+    "# Restore the number of detections in the dictionary\n",
     "detections['num_detections'] = num_detections\n",
     "\n",
-    "# detection_classes should be ints.\n",
+    "# Convert the detection_classes tensor to integers\n",
     "detections['detection_classes'] = detections['detection_classes'].astype(np.int64)\n",
     "\n",
+    "# Define the label ID offset\n",
     "label_id_offset = 1\n",
+    "\n",
+    "# Create a copy of the original image for visualization purposes\n",
     "image_np_with_detections = image_np.copy()\n",
     "\n",
+    "# Visualize the detected objects and their labels on the image\n",
     "viz_utils.visualize_boxes_and_labels_on_image_array(\n",
     "            image_np_with_detections,\n",
     "            detections['detection_boxes'],\n",
-    "            detections['detection_classes']+label_id_offset,\n",
+    "            detections['detection_classes'] + label_id_offset,\n",
     "            detections['detection_scores'],\n",
     "            category_index,\n",
     "            use_normalized_coordinates=True,\n",
@@ -634,6 +647,7 @@
     "            min_score_thresh=.8,\n",
     "            agnostic_mode=False)\n",
     "\n",
+    "# Display the image with detections using Matplotlib\n",
     "plt.imshow(cv2.cvtColor(image_np_with_detections, cv2.COLOR_BGR2RGB))\n",
     "plt.show()"
    ]
