--- a/0.0 Testing GPU.ipynb
+++ b/0.0 Testing GPU.ipynb
@@ -6,17 +6,13 @@
    "metadata": {},
    "source": [
     "## This is a test to see if the GPU is working\n",
-    "#### I made an enviroment.yaml file for my conda environment. \n",
-    "\n",
-    "#### I used the following command to create the environment: \n",
-    "conda env create -f environment.yaml\n",
     "\n",
     " btw keep in mind the correct terminal path "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,25 +30,30 @@
     }
    ],
    "source": [
+    "# Import necessary libraries\n",
     "import sys\n",
-    "\n",
     "import tensorflow.keras\n",
     "import pandas as pd\n",
     "import sklearn as sk\n",
     "import tensorflow as tf\n",
     "\n",
+    "# Print version information of TensorFlow and Keras\n",
     "print(f\"Tensor Flow Version: {tf.__version__}\")\n",
     "print(f\"Keras Version: {tensorflow.keras.__version__}\")\n",
     "print()\n",
+    "\n",
+    "# Print version information of Python, Pandas, and Scikit-Learn\n",
     "print(f\"Python {sys.version}\")\n",
     "print(f\"Pandas {pd.__version__}\")\n",
     "print(f\"Scikit-Learn {sk.__version__}\")\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "\n",
+    "# Check if GPU is available and print the result\n",
+    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\") \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
