--- a/2.1 split images (alternative).ipynb
+++ b/2.1 split images (alternative).ipynb
@@ -148,6 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries\n",
     "import os\n",
     "import shutil\n",
     "import random\n",
@@ -155,6 +156,7 @@
     "import logging\n",
     "from tqdm import tqdm\n",
     "\n",
+    "# Define function to parse command line arguments\n",
     "def parse_arguments():\n",
     "    parser = argparse.ArgumentParser(description='Split image dataset into training and testing sets.')\n",
     "    parser.add_argument('--data_folder', type=str, default=os.path.join('Tensorflow', 'workspace', 'images', 'collectedimages'),\n",
@@ -167,30 +169,40 @@
     "                        help='Ratio of images to be used for training (e.g., 0.8 means 80% for training and 20% for testing)')\n",
     "    return parser.parse_args()\n",
     "\n",
+    "# Define function to get images by subfolder\n",
     "def get_images_by_subfolder(data_folder):\n",
     "    images_by_subfolder = {}\n",
     "    for folder in os.listdir(data_folder):\n",
+    "        # Get image paths for each subfolder\n",
     "        images = [os.path.join(data_folder, folder, f) for f in os.listdir(os.path.join(data_folder, folder)) if f.endswith(\".jpg\")]\n",
     "        images_by_subfolder[folder] = images\n",
     "    return images_by_subfolder\n",
     "\n",
+    "# Define function to read tracking file\n",
     "def read_tracking_file(tracking_file_path):\n",
     "    processed_counts = {}\n",
     "    if os.path.exists(tracking_file_path):\n",
     "        with open(tracking_file_path, 'r') as f:\n",
     "            for line in f:\n",
+    "                # Read processed counts for each subfolder from tracking file\n",
     "                folder, count = line.strip().split(',')\n",
     "                processed_counts[folder] = int(count)\n",
     "    return processed_counts\n",
     "\n",
+    "# Define function to update tracking file\n",
     "def update_tracking_file(tracking_file_path, processed_counts):\n",
     "    with open(tracking_file_path, 'w') as f:\n",
     "        for folder, count in processed_counts.items():\n",
+    "            # Write updated processed counts for each subfolder to tracking file\n",
     "            f.write(f\"{folder},{count}\\n\")\n",
+    "\n",
+    "# Define function to split and copy images to train and test folders\n",
     "def split_and_copy_images(train_folder, test_folder, images_by_subfolder, split_ratio, tracking_file_path):\n",
+    "    # Create train and test folders if they don't exist\n",
     "    os.makedirs(train_folder, exist_ok=True)\n",
     "    os.makedirs(test_folder, exist_ok=True)\n",
     "\n",
+    "    # Read processed counts from tracking file\n",
     "    processed_counts = read_tracking_file(tracking_file_path)\n",
     "\n",
     "    for folder, images in images_by_subfolder.items():\n",
@@ -210,7 +222,8 @@
     "            image_name = os.path.basename(image_path)\n",
     "            xml_name = os.path.splitext(image_name)[0] + \".xml\"\n",
     "            xml_path = os.path.join(os.path.dirname(image_path), xml_name)\n",
-    "\n",
+    "            \n",
+    "            # Copy train images and XML files to train folder\n",
     "            shutil.copy(image_path, os.path.join(train_folder, image_name))\n",
     "            shutil.copy(xml_path, os.path.join(train_folder, xml_name))\n",
     "\n",
@@ -219,6 +232,7 @@
     "            xml_name = os.path.splitext(image_name)[0] + \".xml\"\n",
     "            xml_path = os.path.join(os.path.dirname(image_path), xml_name)\n",
     "\n",
+    "            # Copy train images and XML files to test folder\n",
     "            shutil.copy(image_path, os.path.join(test_folder, image_name))\n",
     "            shutil.copy(xml_path, os.path.join(test_folder, xml_name))\n",
     "\n",
@@ -226,25 +240,35 @@
     "\n",
     "    update_tracking_file(tracking_file_path, processed_counts)\n",
     "    \n",
+    "# Define main function\n",
     "def main():\n",
     "    logging.basicConfig(level=logging.INFO)\n",
     "\n",
-    "    # args = parse_arguments()  #not using\n",
+    "    # Parse command line arguments\n",
+    "    args = parse_arguments()\n",
     "\n",
+    "    # Check if data folder exists\n",
     "    if not os.path.exists(args.data_folder):\n",
     "        logging.error(f\"Data folder '{args.data_folder}' does not exist.\")\n",
     "        return\n",
     "\n",
+    "    # Get images by subfolder\n",
     "    images_by_subfolder = get_images_by_subfolder(args.data_folder)\n",
     "\n",
+    "    # Check if images exist\n",
     "    if not images_by_subfolder:\n",
     "        logging.error(\"No images found in the data folder.\")\n",
     "        return\n",
     "\n",
+    "    # Track processed counts of images by subfolder\n",
     "    tracking_file_path = \"image_split_tracking.txt\"\n",
+    "\n",
+    "    # Split and copy images to train and test folders\n",
     "    split_and_copy_images(args.train_folder, args.test_folder, images_by_subfolder, args.split_ratio, tracking_file_path)\n",
+    "\n",
     "    logging.info(\"Successfully split and copied images and XML files to train and test folders.\")\n",
     "\n",
+    "# Call main function if this script is being run directly\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
