--- a/2.0 Split images to train-test.ipynb
+++ b/2.0 Split images to train-test.ipynb
@@ -5,17 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage Guide\n",
-    "\n",
+    "# Usage Guide"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is designed to split a dataset of images and their corresponding XML files into training and testing sets. The dataset is organized into subfolders within a main data folder. If you only want to split the highlighted images use the part 2 of the 2.1 version.\n",
     "\n",
     "The Part 1 of the 2.1 version is honestly better than 2.0 but idk maybe some people want to see this one since this script does not consider that if you have already split the data and add new data into collected images file\n",
     "\n",
-    "### Prerequisites\n",
-    "\n",
-    "Make sure you have Python 3.x installed on your system.\n",
-    "\n",
-    "### How to use the script\n",
+    "## How to use the script\n",
     "\n",
     "1. Save the provided script as a `.py` file, for example `split_images.py`.\n",
     "\n",
@@ -75,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## If you want to use this notebook instead "
+    "# If you want to use this notebook instead "
    ]
   },
   {
